--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <h1>Encontre apoio psiquiátrico em Goiânia</h1> 
                             </div>
                             <div class="text-home">
-                                <h4>Dra. Jordana Menez, especialista em Psiquiatria, está pronta para ajudar você a encontrar equilíbrio emocional e bem-estar. Agende sua consulta hoje mesmo.</h4> 
+                                <h4>Dra. Jordana Menez, médica psiquiatra, está pronta para ajudar você a encontrar equilíbrio emocional e bem-estar. Agende sua consulta hoje mesmo.</h4> 
                             </div>
                             <a data-anime="bottom" class="btn-red" href="#section-contato">ENTRAR EM CONTATO</a> 
                         </div>
@@ -121,7 +121,7 @@
                         <div class="sobre-right">
                             <h2>Sobre mim</h2>
                             <hr class="hr-low-red">
-                            <p data-anime="right">Olá! Sou a Dra. Jordana Menez, uma psiquiatra formada pela Universidade Federal de Goiás (UFG) e com especialização em Psiquiatria pela Pax Instituto de Psiquiatria. Minha abordagem de tratamento é baseada em evidências e personalizada para atender às necessidades únicas de cada paciente. Trabalho em parceria com meus pacientes, oferecendo um espaço seguro e acolhedor para explorar suas preocupações, emoções e metas de vida. Meu objetivo é fornecer cuidados de saúde mental abrangentes e empáticos, ajudando meus pacientes a alcançarem uma vida saudável e equilibrada.</p> 
+                            <p data-anime="right">Olá! Sou a dra Jordana Menez, graduei-me em medicina na Universidade Federal de Goiás (UFG) e fiz minha residência em psiquiatria na Pax Instituto de Psiquiatria. Minha abordagem de tratamento é baseada em evidências e personalizada para atender às necessidades únicas de cada paciente. Trabalho em parceria com meus pacientes, oferecendo um espaço seguro e acolhedor para explorar suas preocupações, emoções e metas de vida. Meu objetivo é fornecer cuidados de saúde mental abrangentes e empáticos, ajudando meus pacientes a alcançarem uma vida saudável e equilibrada.</p> 
                             <a data-anime="right" class="btn-red" href="#section-contato">ME ENCONTRE NAS REDES</a> 
                         </div>
                     </div>
@@ -686,7 +686,7 @@
              <div>Todos os direitos reservados.</div>
              <a href="politica-privacidade.html">Política de Privacidade</a> 
              <a href="termos-uso.html">Termos de Uso</a>
-             <div>Desenvolvido por <a href="#">Felipe Palmeira</a></div>
+             <div>Desenvolvido por <a href="https://www.instagram.com/felipdpp/">Felipe Palmeira</a></div>
         </div>
 
         <!-- <a class="wpp-flutuante" href="#">
