--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     </div>
                     <div class="contato-flex">
                         <div class="contato-left">
-                            <form class="form-contato" action="https://formsubmit.co/felipeppdev@gmail.com" method="POST">
+                            <form class="form-contato" action="https://formsubmit.co/jordanamenez.psiq@gmail.com" method="POST">
                                 <div class="input-form">
                                     <label for="nome">Nome:</label>
                                     <input class="input-field" type="text" name="Nome" id="nome">
