--- a/paginas/esquizofrenia.html
+++ b/paginas/esquizofrenia.html
@@ -89,14 +89,22 @@
                     <hr class="hr-low-red">
                 </div>
                 <div class="conteudo-pagina">
-                    <p>A esquizofrenia é um transtorno mental complexo que afeta a forma como uma pessoa pensa, sente e se comporta. Se você ou alguém que você conhece está lidando com os desafios da esquizofrenia, é importante buscar ajuda profissional e entender que a recuperação é possível. Sou a Dra. Jordana Menez, uma psiquiatra especializada no tratamento da esquizofrenia, e estou aqui para oferecer informações e apoio durante essa jornada.</p>
+                    <p>A esquizofrenia é um transtorno mental complexo que afeta a forma como uma pessoa pensa, sente e se comporta. Se você ou alguém que você conhece está lidando com os desafios da esquizofrenia, é importante buscar ajuda profissional e entender que a recuperação é possível. Existem profissionais especializados no tratamento da esquizofrenia que podem oferecer informações e apoio durante essa jornada.</p>
+
                     <p>A esquizofrenia é caracterizada por sintomas como alucinações, delírios, pensamentos desorganizados, comportamento desorganizado e dificuldade de concentração. Esses sintomas podem ser assustadores e interferir significativamente na vida diária, relacionamentos, estudos e trabalho.</p>
-                    <p>É fundamental compreender que a esquizofrenia não é culpa de ninguém e não está relacionada a fraquezas pessoais. É uma doença médica que requer tratamento especializado e apoio contínuo. Com o manejo adequado, é possível gerenciar os sintomas, melhorar a qualidade de vida e alcançar a estabilidade.</p>
-                    <p>Como especialista em saúde mental, estou aqui para oferecer um tratamento abrangente e individualizado para a esquizofrenia. Trabalharemos em conjunto para desenvolver um plano de tratamento que atenda às suas necessidades específicas, combinando medicamentos antipsicóticos, psicoterapia e apoio emocional.</p>
-                    <p>Os medicamentos antipsicóticos são frequentemente prescritos para ajudar a controlar os sintomas da esquizofrenia. Como médica, posso avaliar suas necessidades individuais e ajustar a medicação para garantir a eficácia e minimizar os efeitos colaterais.</p>
-                    <p>Além da medicação, a psicoterapia desempenha um papel fundamental no tratamento da esquizofrenia. A terapia pode ajudá-lo a desenvolver habilidades de enfrentamento, aprimorar a compreensão da doença e promover a autonomia na gestão dos sintomas.</p>
-                    <p>Lembre-se de que você não está sozinho nessa jornada. Existem grupos de apoio e recursos disponíveis para ajudar você e seus entes queridos a entenderem a esquizofrenia e a encontrar o suporte necessário. Estou aqui para fornecer um ambiente seguro e acolhedor, onde você pode compartilhar suas preocupações, receber apoio emocional e orientação durante todo o processo.</p>
-                    <p>Se você ou alguém que você conhece está lidando com a esquizofrenia, convido-o a entrar em contato comigo. Estou comprometida em fornecer o cuidado especializado de que você precisa. Juntos, podemos trabalhar para alcançar a estabilidade e o bem-estar emocional. Agende uma consulta comigo, a Dra. Jordana Menez, e vamos começar essa jornada de recuperação juntos. Há esperança e ajuda disponíveis para você.</p>
+
+                    <p>É fundamental compreender que a esquizofrenia não é culpa de ninguém e não está relacionada a fraquezas pessoais. Trata-se de uma doença médica que requer tratamento especializado e apoio contínuo. Com o manejo adequado, é possível gerenciar os sintomas, melhorar a qualidade de vida e alcançar a estabilidade.</p>
+
+                    <p>Profissionais especializados em saúde mental estão disponíveis para oferecer um tratamento abrangente e individualizado para a esquizofrenia. É possível trabalhar em conjunto para desenvolver um plano de tratamento que atenda às necessidades específicas, combinando medicamentos antipsicóticos, psicoterapia e apoio emocional.</p>
+
+                    <p>Os medicamentos antipsicóticos são frequentemente prescritos para ajudar a controlar os sintomas da esquizofrenia. Profissionais especializados podem avaliar as necessidades individuais e ajustar a medicação para garantir a eficácia e minimizar os efeitos colaterais.</p>
+
+                    <p>Além da medicação, a psicoterapia desempenha um papel fundamental no tratamento da esquizofrenia. A terapia pode ajudar a desenvolver habilidades de enfrentamento, aprimorar a compreensão da doença e promover a autonomia na gestão dos sintomas.</p>
+
+                    <p>Lembre-se de que você não está sozinho nessa jornada. Existem grupos de apoio e recursos disponíveis para ajudar você e seus entes queridos a entenderem a esquizofrenia e a encontrar o suporte necessário. É possível encontrar um ambiente seguro e acolhedor, onde é possível compartilhar preocupações, receber apoio emocional e orientação durante todo o processo.</p>
+
+                    <p>Se você ou alguém que você conhece está lidando com a esquizofrenia, é recomendado buscar a ajuda de profissionais especializados. Eles estão comprometidos em fornecer o cuidado especializado de que você precisa. Juntos, é possível trabalhar para alcançar a estabilidade e o bem-estar emocional. Agende uma consulta e vamos começar essa jornada de recuperação juntos. Há esperança e ajuda disponíveis para você.</p>
+
                 </div>
             </div>
         </section>
