--- a/paginas/reacoes-ao-estresse-e-luto.html
+++ b/paginas/reacoes-ao-estresse-e-luto.html
@@ -89,14 +89,21 @@
                     <hr class="hr-low-red">
                 </div>
                 <div class="conteudo-pagina">
-                    <p>As reações ao estresse e ao luto são experiências comuns na vida de muitas pessoas. Se você está lidando com essas situações desafiadoras, gostaria de fornecer informações importantes e incentivar você a buscar apoio profissional para enfrentar esses momentos difíceis. Sou a Dra. Jordana Menez, uma psiquiatra dedicada ao cuidado emocional, e estou aqui para oferecer suporte e orientação durante essa jornada.</p>
+                    <p>As reações ao estresse e ao luto são experiências comuns na vida de muitas pessoas. Se você está lidando com essas situações desafiadoras, é importante buscar apoio profissional para enfrentar esses momentos difíceis. Existem profissionais dedicados ao cuidado emocional que podem oferecer suporte e orientação durante essa jornada.</p>
+
                     <p>O estresse é uma resposta natural do corpo a situações exigentes ou ameaçadoras. No entanto, quando o estresse se torna crônico ou esmagador, pode ter um impacto significativo na saúde física e mental. Reações ao estresse, como ansiedade, irritabilidade, dificuldade de concentração, insônia e alterações de humor, podem afetar negativamente a qualidade de vida e os relacionamentos.</p>
+
                     <p>O luto é uma resposta emocional à perda de alguém querido ou a uma grande mudança na vida. Cada pessoa experimenta o luto de maneira única, mas comumente envolve sentimentos de tristeza profunda, raiva, confusão, culpa e uma sensação de vazio. O processo de luto pode ser doloroso e desafiador, exigindo tempo e apoio para se adaptar à nova realidade.</p>
+
                     <p>É importante reconhecer que o estresse e o luto não são sinais de fraqueza ou falta de controle. São reações humanas normais diante de circunstâncias difíceis. No entanto, buscar ajuda profissional pode ser fundamental para lidar de forma saudável e construtiva com essas experiências.</p>
-                    <p>Como especialista em saúde mental, estou aqui para oferecer apoio e orientação durante esses momentos desafiadores. Trabalharemos juntos para desenvolver estratégias de enfrentamento eficazes, aprender técnicas de gerenciamento de estresse e encontrar maneiras saudáveis de lidar com o luto.</p>
-                    <p>A terapia pode ser uma ferramenta valiosa no processo de lidar com o estresse e o luto. Através da terapia individual, podemos explorar seus sentimentos, compreender suas reações emocionais e desenvolver mecanismos saudáveis de enfrentamento para lidar com as situações estressantes e o processo de luto.</p>
-                    <p>Além disso, ter um espaço seguro e acolhedor para expressar suas emoções e compartilhar suas preocupações pode ser extremamente benéfico durante esses momentos difíceis. Minha abordagem compassiva e livre de julgamentos visa oferecer um ambiente de suporte onde você possa se sentir ouvido, compreendido e apoiado em sua jornada de cura.</p>
-                    <p>Lembre-se de que você não precisa enfrentar o estresse e o luto sozinho. Há apoio disponível para ajudá-lo a navegar por esses desafios e a encontrar um caminho para a cura e o bem-estar emocional. Se você está lidando com reações ao estresse ou lutando com o processo de luto, convido-o a entrar em contato comigo. Estou aqui para fornecer o cuidado especializado necessário para ajudá-lo a superar esses momentos difíceis. Juntos, podemos trabalhar para encontrar a resiliência, a paz interior e a força necessárias para seguir em frente. Agende uma consulta comigo, a Dra. Jordana Menez, e vamos começar essa jornada de recuperação juntos.</p>
+
+                    <p>Profissionais especializados em saúde mental estão disponíveis para oferecer apoio e orientação durante esses momentos desafiadores. É possível trabalhar juntos para desenvolver estratégias de enfrentamento eficazes, aprender técnicas de gerenciamento de estresse e encontrar maneiras saudáveis de lidar com o luto.</p>
+
+                    <p>A terapia pode ser uma ferramenta valiosa no processo de lidar com o estresse e o luto. Através da terapia individual, é possível explorar seus sentimentos, compreender suas reações emocionais e desenvolver mecanismos saudáveis de enfrentamento para lidar com as situações estressantes e o processo de luto.</p>
+
+                    <p>Além disso, ter um espaço seguro e acolhedor para expressar suas emoções e compartilhar suas preocupações pode ser extremamente benéfico durante esses momentos difíceis. Uma abordagem compassiva e livre de julgamentos visa oferecer um ambiente de suporte onde você possa se sentir ouvido, compreendido e apoiado em sua jornada de cura.</p>
+
+                    <p>Lembre-se de que você não precisa enfrentar o estresse e o luto sozinho. Há apoio disponível para ajudá-lo a navegar por esses desafios e a encontrar um caminho para a cura e o bem-estar emocional. Se você está lidando com reações ao estresse ou lutando com o processo de luto, é recomendado buscar a ajuda de profissionais especializados. Juntos, é possível trabalhar para encontrar a resiliência, a paz interior e a força necessárias para seguir em frente.</p>
                 </div>
             </div>
         </section>
