--- a/paginas/transtorno-depressao-maior.html
+++ b/paginas/transtorno-depressao-maior.html
@@ -89,15 +89,23 @@
                     <hr class="hr-low-red">
                 </div>
                 <div class="conteudo-pagina">
-                    <p>O Transtorno Depressão Maior, também conhecido como depressão clínica, é uma condição de saúde mental séria que afeta milhões de pessoas em todo o mundo. É mais do que apenas sentir-se triste ou desanimado temporariamente; é uma condição persistente e debilitante que interfere na vida diária e nas relações interpessoais.</p>
+                    <p>O Transtorno Depressão Maior, também conhecido como depressão unipolar, é uma condição de saúde mental séria que afeta milhões de pessoas em todo o mundo. Não se trata apenas de sentir-se temporariamente triste ou desanimado; é uma condição persistente e debilitante que interfere na vida diária e nas relações interpessoais.</p>
+
                     <p>As pessoas que sofrem de Transtorno Depressão Maior experimentam sintomas que vão além da tristeza normal. Esses sintomas podem incluir uma sensação constante de tristeza, perda de interesse ou prazer em atividades anteriormente apreciadas, alterações no apetite e no peso corporal, dificuldade de concentração, fadiga e falta de energia, sentimentos de culpa ou inutilidade, insônia ou excesso de sono, irritabilidade e pensamentos recorrentes de morte ou suicídio.</p>
+
                     <p>A depressão maior não discrimina e pode afetar pessoas de todas as idades, gêneros e origens étnicas. Fatores genéticos, desequilíbrios químicos no cérebro, eventos traumáticos, problemas de saúde física, uso de certos medicamentos e estresse crônico são apenas algumas das muitas causas possíveis desse transtorno.</p>
-                    <p>É importante destacar que a depressão não é apenas uma fraqueza emocional ou uma escolha consciente de se sentir triste. É uma condição médica legítima e requer tratamento adequado. O diagnóstico é realizado por profissionais de saúde mental com base em critérios específicos estabelecidos no Manual Diagnóstico e Estatístico de Transtornos Mentais (DSM-5).</p>
+
+                    <p>É importante destacar que a depressão não é apenas uma fraqueza emocional ou uma escolha consciente de se sentir triste. Trata-se de uma condição médica legítima e requer tratamento adequado. O diagnóstico é realizado por profissionais de saúde mental com base em critérios específicos estabelecidos no Manual Diagnóstico e Estatístico de Transtornos Mentais (DSM-5).</p>
+
                     <p>O tratamento para o Transtorno Depressão Maior pode envolver uma combinação de psicoterapia e medicamentos antidepressivos. A psicoterapia, como a terapia cognitivo-comportamental (TCC), pode ajudar os indivíduos a identificar padrões de pensamentos negativos e a desenvolver habilidades para enfrentar e superar os sintomas depressivos. Os medicamentos antidepressivos, prescritos por um profissional de saúde, podem ajudar a equilibrar substâncias químicas no cérebro e reduzir os sintomas da depressão.</p>
-                    <p>Além do tratamento profissional, existem algumas estratégias que podem auxiliar na gestão da depressão, como a prática regular de exercícios físicos, o estabelecimento de uma rotina saudável de sono, a busca de apoio emocional de entes queridos e grupos de apoio, a adoção de técnicas de relaxamento e a redução do estresse</p>
-                    <p>É fundamental entender que a depressão maior não é algo que pode ser superado simplesmente com força de vontade. É uma doença complexa que requer suporte e compreensão da sociedade como um todo. A empatia, o apoio e a conscientização são essenciais para ajudar aqueles que estão enfrentando a depressão a buscar o tratamento adequado e encontrar esperança em sua jornada de recuperação.</p>
+
+                    <p>Além do tratamento profissional, existem algumas estratégias que podem auxiliar na gestão da depressão, como a prática regular de exercícios físicos, o estabelecimento de uma rotina saudável de sono, a busca de apoio emocional de entes queridos e grupos de apoio, a adoção de técnicas de relaxamento e a redução do estresse.</p>
+
+                    <p>É fundamental entender que a depressão maior não é algo que pode ser superado simplesmente com força de vontade. Trata-se de uma doença complexa que requer suporte e compreensão da sociedade como um todo. A empatia, o apoio e a conscientização são essenciais para ajudar aqueles que estão enfrentando a depressão a buscar o tratamento adequado e encontrar esperança em sua jornada de recuperação.</p>
+
                     <p>Se você ou alguém que você conhece está enfrentando os sintomas de depressão, é crucial buscar ajuda profissional. Não hesite em entrar em contato com um profissional de saúde mental para obter um diagnóstico preciso e um plano de tratamento adequado. A depressão pode ser tratada, e com apoio adequado, é possível encontrar alívio e reconstruir uma vida plena e significativa.</p>
-                    <p>Lembre-se de que buscar ajuda profissional é um ato de coragem e autocuidado. Você não está sozinho nessa jornada. Juntos, podemos trabalhar para superar a depressão e encontrar uma vida plena e significativa. Você merece viver uma vida feliz e saudável, e estou aqui para apoiá-lo nesse processo.</p>
+
+                    <p>Lembre-se de que buscar ajuda profissional é um ato de coragem e autocuidado. Nessa jornada, você não está sozinho. Juntos, podemos trabalhar para superar a depressão e encontrar uma vida plena e significativa. Você merece viver uma vida feliz e saudável, e estou aqui para apoiá-lo nesse processo.</p>
                 </div>
             </div>
         </section>
