--- a/paginas/transtornos-alimentares.html
+++ b/paginas/transtornos-alimentares.html
@@ -89,13 +89,18 @@
                     <hr class="hr-low-red">
                 </div>
                 <div class="conteudo-pagina">
-                    <p>Os transtornos alimentares são condições complexas que afetam a relação de uma pessoa com a comida, o peso corporal e a imagem corporal. Se você está enfrentando os desafios dos transtornos alimentares, quero oferecer informações importantes e incentivá-lo a buscar ajuda profissional para encontrar o caminho para a recuperação e a saúde. Sou a Dra. Jordana Menez, uma psiquiatra especializada no tratamento de transtornos alimentares, e estou aqui para apoiá-lo nessa jornada de cuidado e recuperação.</p>
+                    <p>Os transtornos alimentares são condições complexas que afetam a relação de uma pessoa com a comida, o peso corporal e a imagem corporal. Se você está enfrentando os desafios dos transtornos alimentares, é importante buscar informações e ajuda profissional para encontrar o caminho para a recuperação e a saúde. Sou a Dra. Jordana Menez, uma psiquiatra especializada no tratamento de transtornos alimentares, e estou aqui para oferecer apoio nessa jornada de cuidado e recuperação.</p>
+
                     <p>Os transtornos alimentares, como a anorexia nervosa, bulimia nervosa e transtorno de compulsão alimentar periódica, envolvem padrões alimentares disfuncionais que podem ter graves repercussões físicas e emocionais. Essas condições podem ser desafiadoras e afetar negativamente a saúde, o bem-estar e a qualidade de vida.</p>
+
                     <p>É importante entender que os transtornos alimentares não são simplesmente uma questão de escolha ou falta de força de vontade. Eles são distúrbios de saúde mental que exigem tratamento adequado e abrangente. Com o apoio necessário, é possível superar os desafios dos transtornos alimentares e estabelecer uma relação saudável com a comida, o corpo e a imagem corporal.</p>
-                    <p>Como especialista em saúde mental, estou aqui para oferecer um tratamento individualizado e compreensivo para os transtornos alimentares. Trabalharemos juntos para desenvolver um plano de tratamento personalizado, que pode incluir psicoterapia, aconselhamento nutricional e, em alguns casos, medicamentos.</p>
+
                     <p>A psicoterapia é uma parte fundamental do tratamento dos transtornos alimentares. Através da terapia individual ou em grupo, abordaremos os fatores subjacentes que contribuem para os padrões alimentares disfuncionais, exploraremos as emoções e crenças relacionadas ao corpo e desenvolveremos estratégias de enfrentamento saudáveis e duradouras.</p>
+
                     <p>O aconselhamento nutricional também desempenha um papel importante no tratamento dos transtornos alimentares. Trabalharemos para restaurar uma relação equilibrada com a comida, promovendo hábitos alimentares saudáveis e ajudando a reconstruir a confiança no autocuidado nutricional.</p>
+
                     <p>Lembre-se de que você não está sozinho nessa jornada. Existem recursos, grupos de apoio e profissionais especializados disponíveis para ajudar você a encontrar o caminho para a recuperação. Estou aqui para fornecer um ambiente seguro, acolhedor e livre de julgamentos, onde você pode compartilhar suas preocupações, receber apoio emocional e orientação durante todo o processo de recuperação.</p>
+
                     <p>Se você está lutando contra um transtorno alimentar ou conhece alguém que está enfrentando essa condição, convido-o a entrar em contato comigo. Estou comprometida em fornecer o cuidado especializado necessário para ajudá-lo a superar os desafios dos transtornos alimentares. Juntos, podemos trabalhar para estabelecer uma relação saudável com a comida, promover a cura do corpo e da mente, e encontrar a liberdade e o bem-estar que você merece. Agende uma consulta comigo, a Dra. Jordana Menez, e vamos começar essa jornada de recuperação juntos. Há esperança e ajuda disponíveis para você.</p>
                 </div>
             </div>
