--- a/paginas/transtornos-ansiosos.html
+++ b/paginas/transtornos-ansiosos.html
@@ -89,12 +89,16 @@
                     <hr class="hr-low-red">
                 </div>
                 <div class="conteudo-pagina">
-                    <p>Os transtornos ansiosos são condições de saúde mental que afetam milhões de pessoas em todo o mundo, causando preocupação excessiva, medos intensos e sintomas físicos relacionados à ansiedade. Como psiquiatra especializada no tratamento desses transtornos, gostaria de fornecer informações e incentivar aqueles que estão sofrendo a buscar ajuda profissional para encontrar alívio e bem-estar. Sou a Dra. Jordana Menez e estou aqui para apoiá-lo nessa jornada de cuidado e recuperação.</p>
+                    <p>Os transtornos ansiosos são condições de saúde mental que afetam milhões de pessoas em todo o mundo, causando preocupação excessiva, medos intensos e sintomas físicos relacionados à ansiedade. Se você está enfrentando os desafios desses transtornos, é importante buscar informações e ajuda profissional para encontrar alívio e bem-estar. Sou a Dra. Jordana Menez, uma psiquiatra especializada no tratamento desses transtornos, e estou aqui para apoiá-lo nessa jornada de cuidado e recuperação.</p>
+
                     <p>Os transtornos ansiosos podem se manifestar de diferentes maneiras, incluindo transtorno de ansiedade generalizada, transtorno do pânico, fobias específicas, transtorno de ansiedade social e transtorno de estresse pós-traumático. Esses transtornos podem ser debilitantes, afetando a qualidade de vida, os relacionamentos e o desempenho acadêmico ou profissional.</p>
+
                     <p>É importante entender que a ansiedade não é simplesmente uma preocupação passageira. Quando os sintomas ansiosos se tornam persistentes e interferem nas atividades diárias, é fundamental procurar ajuda profissional. O tratamento adequado pode ajudar a reduzir os sintomas, desenvolver estratégias de enfrentamento saudáveis e promover a recuperação.</p>
-                    <p>Como especialista em saúde mental, estou aqui para oferecer um tratamento personalizado e abrangente para os transtornos ansiosos. Usando uma abordagem baseada em evidências, combinando psicoterapia, técnicas de relaxamento, estratégias de enfrentamento e, quando necessário, medicamentos, podemos trabalhar juntos para reduzir a ansiedade e melhorar seu bem-estar emocional.</p>
+
                     <p>A terapia cognitivo-comportamental (TCC) é uma abordagem comprovada que pode ajudar a identificar padrões de pensamento negativos, modificar comportamentos disfuncionais e desenvolver habilidades de enfrentamento eficazes. Além disso, a medicação pode ser considerada para tratar sintomas graves de ansiedade, quando apropriado.</p>
+
                     <p>Não espere mais para buscar ajuda. Se você está enfrentando os sintomas de um transtorno ansioso, ou conhece alguém que está lutando contra a ansiedade, convido-o a entrar em contato comigo. Estou aqui para oferecer um espaço seguro, acolhedor e livre de julgamentos, onde você pode compartilhar suas preocupações, receber suporte emocional e encontrar estratégias eficazes para lidar com a ansiedade.</p>
+
                     <p>Lembre-se de que você não precisa enfrentar isso sozinho. Com o tratamento adequado e o suporte necessário, é possível superar os transtornos ansiosos e levar uma vida mais equilibrada e gratificante. Permita-me ser sua parceira nessa jornada de recuperação. Agende uma consulta comigo, a Dra. Jordana Menez, e vamos trabalhar juntos para encontrar o alívio e a tranquilidade que você merece.</p>
                 </div>
             </div>
