--- a/paginas/toc.html
+++ b/paginas/toc.html
@@ -89,14 +89,21 @@
                     <hr class="hr-low-red">
                 </div>
                 <div class="conteudo-pagina">
-                    <p>O Transtorno Obsessivo-Compulsivo (TOC) é uma condição de saúde mental que afeta muitas pessoas em todo o mundo. Se você está enfrentando os desafios do TOC, quero oferecer informações importantes e incentivá-lo a procurar ajuda profissional para encontrar alívio e bem-estar. Sou a Dra. Jordana Menez, uma psiquiatra especializada no tratamento do TOC, e estou aqui para apoiá-lo nessa jornada de cuidado e recuperação.</p>
+                    <p>O Transtorno Obsessivo-Compulsivo (TOC) é uma condição de saúde mental que afeta muitas pessoas em todo o mundo. Se você está enfrentando os desafios do TOC, é importante buscar informações e ajuda profissional para encontrar alívio e bem-estar. Existem profissionais especializados no tratamento do TOC que podem oferecer apoio durante essa jornada de cuidado e recuperação.</p>
+
                     <p>O TOC é caracterizado pela presença de obsessões e compulsões recorrentes e persistentes. As obsessões são pensamentos, imagens ou impulsos indesejados e intrusivos, enquanto as compulsões são comportamentos repetitivos realizados em resposta às obsessões, com o objetivo de aliviar a ansiedade ou prevenir algo negativo. Esses padrões podem ser extremamente perturbadores e afetar sua vida diária, relacionamentos e bem-estar emocional.</p>
-                    <p>É importante compreender que o TOC não é simplesmente uma questão de ter manias ou ser perfeccionista. É uma condição séria que requer tratamento adequado. Com o manejo apropriado, é possível controlar os sintomas, encontrar estratégias de enfrentamento saudáveis e viver uma vida plena.</p>
-                    <p>Como especialista em saúde mental, estou aqui para oferecer um tratamento individualizado e abrangente para o TOC. Meu objetivo é trabalhar em parceria com você, compreendendo suas necessidades específicas e desenvolvendo um plano de tratamento personalizado.</p>
-                    <p>A terapia cognitivo-comportamental (TCC) é um dos principais tratamentos recomendados para o TOC. Por meio da TCC, exploraremos suas obsessões e compulsões, identificaremos os padrões disfuncionais de pensamento e comportamento e desenvolveremos estratégias eficazes para desafiar e modificar esses padrões.</p>
-                    <p>Além da terapia, podem ser considerados medicamentos para auxiliar no controle dos sintomas do TOC. Como médica especializada em saúde mental, posso avaliar suas necessidades individuais e prescrever medicamentos, se apropriado, trabalhando em conjunto com a terapia para alcançar melhores resultados.</p>
-                    <p>Não espere mais para buscar ajuda. Se você está enfrentando os sintomas do TOC ou conhece alguém que está lutando contra essa condição, convido-o a entrar em contato comigo. Estou aqui para fornecer um espaço seguro, livre de julgamentos, onde você pode compartilhar suas preocupações, receber suporte emocional e encontrar estratégias eficazes para lidar com o TOC.</p>
-                    <p>Lembre-se de que você não está sozinho nessa jornada. Com o tratamento adequado e o suporte necessário, é possível controlar os sintomas do TOC e levar uma vida mais equilibrada e gratificante. Permita-me ser sua parceira nessa jornada de recuperação. Agende uma consulta comigo, a Dra. Jordana Menez, e vamos trabalhar juntos para encontrar o alívio e a tranquilidade que você merece.</p>
+
+                    <p>É importante compreender que o TOC não é simplesmente uma questão de ter manias ou ser perfeccionista. Trata-se de uma condição séria que requer tratamento adequado. Com o manejo apropriado, é possível controlar os sintomas, encontrar estratégias de enfrentamento saudáveis e viver uma vida plena.</p>
+
+                    <p>Profissionais especializados em saúde mental estão disponíveis para oferecer um tratamento individualizado e abrangente para o TOC. O objetivo é trabalhar em parceria, compreendendo suas necessidades específicas e desenvolvendo um plano de tratamento personalizado.</p>
+
+                    <p>A terapia cognitivo-comportamental (TCC) é um dos principais tratamentos recomendados para o TOC. Por meio da TCC, é possível explorar suas obsessões e compulsões, identificar os padrões disfuncionais de pensamento e comportamento e desenvolver estratégias eficazes para desafiar e modificar esses padrões.</p>
+
+                    <p>Além da terapia, podem ser considerados medicamentos para auxiliar no controle dos sintomas do TOC. Profissionais especializados em saúde mental podem avaliar suas necessidades individuais e prescrever medicamentos, se apropriado, trabalhando em conjunto com a terapia para alcançar melhores resultados.</p>
+
+                    <p>Não espere mais para buscar ajuda. Se você está enfrentando os sintomas do TOC ou conhece alguém que está lutando contra essa condição, é recomendado entrar em contato com profissionais especializados. Eles estão aqui para fornecer um espaço seguro, livre de julgamentos, onde é possível compartilhar preocupações, receber apoio emocional e encontrar estratégias eficazes para lidar com o TOC.</p>
+
+                    <p>Lembre-se de que você não está sozinho nessa jornada. Com o tratamento adequado e o suporte necessário, é possível controlar os sintomas do TOC e levar uma vida mais equilibrada e gratificante. É possível encontrar profissionais que possam ser parceiros nessa jornada de recuperação. Agende uma consulta e trabalhe em conjunto para encontrar o alívio e a tranquilidade que você merece.</p>
                 </div>
             </div>
         </section>
