--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     <div class="contato-topo" data-anime="left">
                         <h2>Contato</h2>
                         <hr class="hr-low-red">
-                        <p>Mande uma mensagem solicitando um contato que entrarei em contato assim que possível!</p>
+                        <p>Mande uma mensagem que entrarei em contato assim que possível!</p>
                     </div>
                     <div class="contato-flex">
                         <div class="contato-left">
@@ -354,6 +354,10 @@
                                 <div class="input-form">
                                     <label for="email">Email:</label>
                                     <input class="input-field" type="email" name="Email" id="email">
+                                </div>
+                                <div class="input-form">
+                                    <label for="telefone">Telefone:</label>
+                                    <input class="input-field" type="telefone" name="Telefone" id="telefone">
                                 </div>
                                 <div class="input-form">
                                     <label for="mensagem">Mensagem:</label>
