--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                 <input type="hidden" name="_subject" value="Novo Contato!">
                                 <input type="text" name="_honey" style="display:none;">
                                 <input type="hidden" name="_captcha" value="false">
-                                <input type="hidden" name="_next" value="https://felipedpaula.github.io/drjordanamenez/#section-contato">
+                                <input type="hidden" name="_next" value="https://drjordanamenez.com.br/">
 
                                 <div class="input-form">
                                     <input class="input-submit" type="submit" value="ENVIAR MENSAGEM">
