Adicionando botão flutuante Wpp

--- a/index.html
+++ b/index.html
@@ -693,9 +693,9 @@
              <div>Desenvolvido por <a target="_blank" href="https://www.instagram.com/felipdpp/">Felipe Palmeira</a></div>
         </div>
 
-        <!-- <a class="wpp-flutuante" href="#">
+        <a class="wpp-flutuante" target="_blank" href="https://wa.me/556299466080">
             <img width="60px" src="assets/img/icons/wpp-flutuante.png" alt="Whatsapp">
-        </a> -->
+        </a>
     </footer>
 
     <script>
