--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         <p>Mande uma mensagem que entrarei em contato assim que possível!</p>
                     </div>
                     <div class="contato-flex">
-                        <div class="contato-left">
+                        <!-- <div class="contato-left">
                             <form class="form-contato" action="https://formsubmit.co/jordanamenez.psiq@gmail.com" method="POST">
                                 <div class="input-form">
                                     <label for="nome">Nome:</label>
@@ -374,7 +374,7 @@
                                 </div>
 
                             </form>
-                        </div>
+                        </div> -->
                         <div class="contato-right" data-anime="right">
                             <div class="clinica-item">
                                 <h4>Medicorum</h4>
