--- a/index.html
+++ b/index.html
@@ -389,15 +389,15 @@
                                 </div>
                             </div>
                             <div class="clinica-item">
-                                <h4>Flore.Ser</h4>
+                                <h4>SêMente Psiquiatria</h4>
                                 <hr class="hr-green-low">
                                 <div class="clinica-option">
                                     <img src="assets/img/icons/tel.png" width="30px" height="30px" alt="Telefone">
-                                    <div class="option-txt">(62) 98115-7656</div>
+                                    <div class="option-txt">(62) 99364-8167</div>
                                 </div>
                                 <div class="clinica-option">
                                     <img src="assets/img/icons/local.png" width="30px" height="30px" alt="Local">
-                                    <div class="option-txt">Rua benjamim Santos Qd 12 Lt 02, Jardim Todos os Santos, Senador Canedo</div>
+                                    <div class="option-txt">R. 112, n° 295 - St. Sul, Goiânia - GO, 74085-150</div>
                                 </div>
                             </div>
                             <div class="crm-contato">
